fix spacing on nav items

--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -40,6 +40,7 @@ header {
 
 .navbar {
   list-style: none;
+  padding: 20px 0 0 0;
 }
 
 .navbar > a,
